# eskro-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: alembic.ini  cleanup_tokens.py  main.py
app/api/: __init__.py  dependencies.py  helpers.py
app/api/auth/: crud.py  dependencies.py  helpers.py  schemas.py  views.py
app/api/banners/: crud.py  schemas.py  views.py
app/api/contacts/: schemas.py  views.py
app/api/documents/: crud.py  schemas.py  views.py
app/api/email_templates/: schemas.py  views.py
app/api/events/: crud.py  schemas.py  views.py
app/api/feedbacks/: crud.py  schemas.py  views.py
app/api/files/: views.py
app/api/news/: crud.py  schemas.py  views.py
app/api/partners/: crud.py  schemas.py  views.py
app/api/polls/: crud.py  schemas.py  views.py
app/api/projects/: crud.py  schemas.py  views.py
app/api/search/: crud.py  schemas.py  views.py
app/api/subscribers/: crud.py  schemas.py  views.py
app/api/users/: crud.py  helpers.py  schemas.py  views.py
app/core/: config.py  db_helper.py
app/core/admin/: service.py
app/core/contacts/: contacts.json  service.py
app/core/email/: service.py  template_service.py
app/core/email/templates/: base.html  mailing.html  (+5 more)
app/core/file/: service.py
app/core/models/: __init__.py  banner.py  base.py  document.py  event.py  feedback.py  news.py  news_type.py  partner.py  poll.py  poll_answer.py  poll_question.py  project.py  refresh_token.py  subscriber.py  user.py
app/migrations/: env.py
app/security/: README.md  utils.py
(+7 files in other folders)
